First release of Hello World!

--- a/src/app/crick-foot/crick-foot.component.html
+++ b/src/app/crick-foot/crick-foot.component.html
@@ -26,7 +26,7 @@
             <div class="col-md-4">
                 <h5 style="font-family: 'Lucida Sans', sans-serif; font-weight: bold;">Contact Us</h5>
                 <p style="font-size: 0.9rem;">
-                    Email: support@crickup2date.com <br>
+                    Email: 24hr@crickup2date.com <br>
                     Phone: +91-7972-99-7227 <br>
                     Address: 123 Cricket Lane, Sports City, World
                 </p>
