--- a/src/app/crick-contact-us/crick-contact-us.component.html
+++ b/src/app/crick-contact-us/crick-contact-us.component.html
@@ -56,10 +56,10 @@
                             <h4 style="font-family: 'Lucida Sans', sans-serif; font-weight: bold; color: #007bff;">Contact Information</h4>
                             <div class="mt-4">
                                 <p style="font-size: 1rem; color: #6c757d;">
-                                    <strong>Email:</strong> support@crickup2date.com
+                                    <strong>Email:</strong> 24hr@crickup2date.com
                                 </p>
                                 <p style="font-size: 1rem; color: #6c757d;">
-                                    <strong>Phone:</strong> +1-234-567-890
+                                    <strong>Phone:</strong> +91-7972-99-7227
                                 </p>
                                 <p style="font-size: 1rem; color: #6c757d;">
                                     <strong>Address:</strong> 123 Cricket Lane, Sports City, World
