--- a/src/app/live-score-views/live-score-views.component.html
+++ b/src/app/live-score-views/live-score-views.component.html
@@ -13,7 +13,7 @@
     </div>
 
     <!-- Tabs for Team Scores -->
-    <ul class="nav nav-tabs mt-4 ml-4 justify-content-start" id="scoreTabs" role="tablist">
+    <ul class="nav nav-tabs mt-4 justify-content-end" id="scoreTabs" role="tablist" style="margin-right: 10%;">
         <li class="nav-item">
             <a class="nav-link active" id="team1-tab" data-bs-toggle="tab" href="#team1" role="tab" aria-controls="team1" aria-selected="true">
                 {{ match?.team1 }} Scorecard
