--- a/src/app/crick-news/crick-news.component.html
+++ b/src/app/crick-news/crick-news.component.html
@@ -19,14 +19,16 @@
                 <div class="card-body">
                     <h5 class="card-title">{{ article.title }}</h5>
                     <p class="card-text">{{ article.summary }}</p>
-                    <a [routerLink]="['/article-details', article.id]" class="btn btn-primary">Read More</a>
+                    <a [routerLink]="['/article-details', article.id]" class="btn btn-primary btn-sm">Read More</a>
                 </div>
             </div>
+            <br>
+            <br>
         </div>
     </div>
 
     <div class="container-fluid" style="background-color: #f8f9fa; padding: 20px;">
-    
+
         <div class="text-center mt-5">
             <h1 style="font-family: 'Lucida Sans', sans-serif; font-weight: bold; color: #007bff;">
                 IPL Schedule
@@ -35,7 +37,7 @@
                 Check out the upcoming IPL matches and their schedules.
             </p>
         </div>
-    
+
         <div class="mt-5">
             <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
 
@@ -50,29 +52,29 @@
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Match </th>
                     <td mat-cell *matCellDef="let match"> {{ match.team1 }} vs {{ match.team2 }} </td>
                 </ng-container>
-    
+
                 <!-- Date Column -->
                 <ng-container matColumnDef="date">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Date </th>
                     <td mat-cell *matCellDef="let match"> {{ match.date }} </td>
                 </ng-container>
-    
+
                 <!-- Time Column -->
                 <ng-container matColumnDef="time">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Time </th>
                     <td mat-cell *matCellDef="let match"> {{ match.time }} </td>
                 </ng-container>
-    
+
                 <!-- Venue Column -->
                 <ng-container matColumnDef="venue">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Venue </th>
                     <td mat-cell *matCellDef="let match"> {{ match.venue }} </td>
                 </ng-container>
-    
+
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                 <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
             </table>
-    
+
             <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
         </div>
     </div>
